fixed text alignment on p's that were to long for the container

--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@
 #title {
     display: flex;
     justify-content: center;
+    text-align: center;
 }
 
 #imgage {
